Default layout bug fix.
git-svn-id: http://xe-core.googlecode.com/svn/branches/maserati@12361 201d5d3c-b55e-5fd7-737f-ddc643e51545

--- a/common/css/xe.css
+++ b/common/css/xe.css
@@ -2,6 +2,7 @@
 /* NHN (developers@xpressengine.com) */
 /* Element Reset */
 body,table,input,textarea,select,button{font-family:Tahoma,Geneva,sans-serif;font-size:13px}
+article,aside,details,figcaption,figure,footer,header,hgroup,nav,section{display: block}
 body{word-wrap:break-word}
 a img{border:0}
 [hidden],
